<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RemoteControl</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="tv_name">My TV</string>
    <string name="power">TV Power:</string>
    <string name="volume">Speaker Volume:</string>
    <string name="channel">Current Channel:</string>

    <string name="power_label">Power</string>
    <string name="volume_label">Volume</string>
    <string name="channel_label">Channel</string>
    <string name="fav_channel_label">Favorite Channel</string>

    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="channel_up">CH+</string>
    <string name="channel_down">CH-</string>
    <string name="ABC">ABC</string>
    <string name="NBC">NBC</string>
    <string name="CBS">CBS</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="My_TV">My TV</string>
    <string name="My_Remote">My Remote Control</string>
</resources>
